force-app/main/default/objects/MUSW__Master_Inspection_List__c/fields/Avo_Complaint_Type__c.field-meta.xml
<CustomField>
    <fullName>Avo_Complaint_Type__c</fullName>
    <label>Complaint Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Service Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>