force-app/main/default/objects/MUSW__Master_Inspection_List__c/fields/avo_Legacy_Description__c.field-meta.xml
<CustomField>
    <fullName>avo_Legacy_Description__c</fullName>
    <label>Legacy Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>