force-app/main/default/objects/MUSW__Master_Inspection_List__c/fields/avo_Legacy_Number__c.field-meta.xml
<CustomField>
    <fullName>avo_Legacy_Number__c</fullName>
    <label>Legacy Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>