force-app/main/default/objects/MUSW__Master_Inspection_List__c/fields/Avo_Manual_Creation_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Avo_Manual_Creation_Allowed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Manual Creation Allowed</label>
    <type>Checkbox</type>
</CustomField>