force-app/main/default/objects/MUSW__Master_Inspection_List__c/fields/Avo_Permit_Type__c.field-meta.xml
<CustomField>
    <fullName>Avo_Permit_Type__c</fullName>
    <label>Permit Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Avo_Permit_Type</valueSetName>
    </valueSet>
</CustomField>