force-app/main/default/objects/MUSW__Master_Inspection_List__c/fields/Avo_Violation_Type__c.field-meta.xml
<CustomField>
    <fullName>Avo_Violation_Type__c</fullName>
    <label>Violation Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Violation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>