force-app/main/default/objects/MUSW__Master_Inspection_List__c/fields/Checklist_Type__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Type__c</fullName>
    <label>Checklist Type</label>
    <type>TextArea</type>
</CustomField>