force-app/main/default/objects/MUSW__Master_Inspection_List__c/fields/MUSW__Complaint_Types__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Complaint_Types__c</fullName>
    <label>Complaint Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MUSW__Complaint_Types</valueSetName>
    </valueSet>
</CustomField>