force-app/main/default/objects/MUSW__Master_Inspection_List__c/fields/MUSW__Inspection_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Inspection_Record_Type__c</fullName>
    <label>Inspection Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permit_Inspection</fullName>
                <label>Permit Inspection</label>
            </value>
            <value>
                <fullName>Code_Enforcement_Inspection</fullName>
                <label>Code Enforcement Inspection</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>