force-app/main/default/objects/MUSW__Master_Inspection_List__c/fields/MUSW__Inspection_Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Inspection_Type__c</fullName>
    <label>Inspection Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Building Inspection</fullName>
            </value>
            <value>
                <fullName>Electrical Inspection</fullName>
            </value>
            <value>
                <fullName>Final Inspection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>