force-app/main/default/objects/MUSW__Master_Inspection_List__c/fields/Owner_Queue_ID__c.field-meta.xml
<CustomField>
    <fullName>Owner_Queue_ID__c</fullName>
    <label>Owner Queue ID</label>
    <type>TextArea</type>
</CustomField>