force-app/main/default/objects/MUSW__Master_Inspection_List__c/fields/Owner_Queue_User__c.field-meta.xml
<CustomField>
    <fullName>Owner_Queue_User__c</fullName>
    <label>Owner (Queue/User)</label>
    <type>TextArea</type>
</CustomField>