force-app/main/default/objects/MUSW__Master_Inspection_List__c/fields/Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_ID__c</fullName>
    <label>Record Type ID</label>
    <type>TextArea</type>
</CustomField>