force-app/main/default/objects/MUSW__Master_Inspection_List__c/fields/Use_Group__c.field-meta.xml
<CustomField>
    <fullName>Use_Group__c</fullName>
    <label>Use Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Use_Group</valueSetName>
    </valueSet>
</CustomField>