force-app/main/default/objects/MUSW__Master_Inspection_List__c/fields/Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Type__c</fullName>
    <label>Work Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Work_Type</valueSetName>
    </valueSet>
</CustomField>