force-app/main/default/objects/MUSW__Master_Inspection_List__c/recordTypes/Avo_Inspection_Template.recordType-meta.xml
<RecordType>
    <fullName>Avo_Inspection_Template</fullName>
    <active>true</active>
    <label>Inspection Template</label>
</RecordType>