force-app/main/default/objects/MUSW__Master_Inspection_List__c/recordTypes/MUSW__Complaint_Inspection.recordType-meta.xml
<RecordType>
    <fullName>MUSW__Complaint_Inspection</fullName>
    <active>true</active>
    <label>Complaint Inspection</label>
</RecordType>