force-app/main/default/objects/MUSW__Master_Inspection_List__c/recordTypes/MUSW__License_Inspection.recordType-meta.xml
<RecordType>
    <fullName>MUSW__License_Inspection</fullName>
    <active>true</active>
    <label>License Inspection</label>
</RecordType>