force-app/main/default/objects/MUSW__Master_Inspection_List__c/recordTypes/MUSW__Permit_Inspection.recordType-meta.xml
<RecordType>
    <fullName>MUSW__Permit_Inspection</fullName>
    <active>true</active>
    <label>Permit Inspection</label>
</RecordType>