force-app/main/default/objects/MUSW__Master_Inspection_List__c/listViews/MUSW__All.listView-meta.xml
<ListView>
    <fullName>MUSW__All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Avo_Permit_Type__c</columns>
    <columns>Effective_Start_Date__c</columns>
    <columns>Owner_Queue_User__c</columns>
    <columns>Record_Type_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>